--- a/data_structure/linked_list/singlely_linked_list/cpp/CMakeLists.txt
+++ b/data_structure/linked_list/singlely_linked_list/cpp/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(cpp main.cpp singlylinkedlist/singlylinkedlist.cpp singlylinkedlist/singlylinkedlist.h node/node.h)
+add_executable(cpp main.cpp singlylinkedlist/singlylinkedlist.cpp singlylinkedlist/singlylinkedlist.h node/node.h node/node.cpp)
